tests/macro_syntax/fields_with_wrong_syntax_attribute.rs
use const_init_macros::ConstInit;

#[derive(ConstInit)]
struct FooBar {
    #[const_init(value = true)]
    foo: bool,
    #[const_init(val = 3)]
    bar: usize,
}

fn main() {}
